[gd_scene load_steps=12 format=3 uid="uid://ngnlvhkt64p"]

[ext_resource type="Script" uid="uid://catapp1ruqqgw" path="res://enemies/enemies/ufo/ufo_enemy.gd" id="1_fgdhp"]
[ext_resource type="PackedScene" uid="uid://bgn6skvlyj2v4" path="res://components/health/health_component.tscn" id="2_cti73"]
[ext_resource type="Texture2D" uid="uid://cvdv47kc4v2w2" path="res://sprites/enemies/ufo_spritesheet.png" id="3_wy2ip"]
[ext_resource type="PackedScene" uid="uid://c6oyye8in20of" path="res://components/damage_zone/damage_zone.tscn" id="4_wy2ip"]
[ext_resource type="Script" uid="uid://c3y1i1vkjno6i" path="res://enemies/enemies/ufo/shot_component.gd" id="5_8aylx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6y5m"]
radius = 3.16228

[sub_resource type="CircleShape2D" id="CircleShape2D_1onfa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8aylx"]
atlas = ExtResource("3_wy2ip")
region = Rect2(0, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7sh0"]
atlas = ExtResource("3_wy2ip")
region = Rect2(24, 0, 24, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a4fec"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aylx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7sh0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wy2ip"]

[node name="UFOEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 36
script = ExtResource("1_fgdhp")
health = 9
metadata/_custom_type_script = "uid://c1q1k3vkaw7da"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a6y5m")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_cti73")]
parent = NodePath("..")
health = 3
is_enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent"]
shape = SubResource("CircleShape2D_1onfa")
debug_color = Color(0.991133, 0, 0.269532, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a4fec")
autoplay = "default"
frame_progress = 0.703544

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DamageZone" parent="." instance=ExtResource("4_wy2ip")]
hits_player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
shape = SubResource("CircleShape2D_wy2ip")

[node name="ShotComponent" type="Node2D" parent="."]
script = ExtResource("5_8aylx")

[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
